# ai-placement-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_fallback_logic.py  test_fallback_schema.py  test_list_models.py  test_models.py  test_quick.py  test_recruiter_adaptive.py  test_roadmap.py  test_upload.py
app/: main.py
app/agents/: dsa_agent.py  interview_agent.py  job_agent.py  manager_agent.py  ml_agent.py  resume_agent.py
app/analytics/: metrics.py  reports.py  tracker.py
app/api/: router.py
app/auth/: auth_routes.py  jwt_handler.py  middleware.py
app/database/: connection.py  crud.py  models.py  schemas.py
app/evaluation/: answer_evaluator.py  feedback_generator.py  rubric.py
app/graph/: edges.py  nodes.py  state.py  workflow.py
app/llm/: openai_client.py  output_parsers.py  prompts.py
app/memory/: long_term.py  memory_manager.py  short_term.py
app/rag/: chunking.py  embeddings.py  loader.py  prompt.py  retriever.py  vector_store.py
app/services/: chat_service.py  interview_service.py  rag_service.py  resume_service.py  roadmap_service.py
app/tools/: calculator_tool.py  cover_letter_tool.py  interview_tool.py  jd_match_tool.py  resume_parser_tool.py  roadmap_tool.py  search_tool.py
app/utils/: config.py  constants.py  helpers.py  logger.py
deployment/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+1 more)
tests/: conftest.py  test_agents.py  test_api.py  test_rag.py  test_tools.py
(+14 files in other folders)
