[project]
name = "ai-placement-agent"
version = "1.0.0"
description = "AI-powered Placement Preparation Agent with RAG, LangGraph, Multi-Agent Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
